@@ -44,11 +44,11 @@ The blacklist syntax rules are the same as for the whitelist.<br><br>
 
 <ol>
 
-<li>Finish setting up your (<b>~/.tmdarc</b>) by reading
-through the included <b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b> is
-the only entry required for qmail users, but there may be other 
-settings you want to enable or change.
-<br><br>
+<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+system-wide <b>/etc/tmdarc</b> by reading through the included
+<b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b> is the only entry
+required for qmail users, but there may be other settings you want to
+enable or change.  <br><br>
 
 <li>Setup dot-qmail files appropriately in your home directory.<br><br>
 
@@ -127,7 +127,8 @@ otherwise it goes through the confirmation process.
 
 <ol>
 
-<li>Finish setting up your (<b>~/.tmdarc</b>) by reading through the
+<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+system-wide <b>/etc/tmdarc</b> by reading through the
 included <b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b>,
 <b>MAIL_TRANSFER_AGENT</b>, <b>LOCAL_DELIVERY_AGENT</b>, and
 <b>RECIPIENT_DELIMITER</b> are required entries for Postfix users.
