@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 15:53:10 2001 -->
+<!-- Thu Oct 25 10:57:56 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -182,11 +182,11 @@ The blacklist syntax rules are the same as for the whitelist.<br><br>
 
 <ol>
 
-<li>Finish setting up your (<b>~/.tmdarc</b>) by reading
-through the included <b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b> is
-the only entry required for qmail users, but there may be other 
-settings you want to enable or change.
-<br><br>
+<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+system-wide <b>/etc/tmdarc</b> by reading through the included
+<b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b> is the only entry
+required for qmail users, but there may be other settings you want to
+enable or change.  <br><br>
 
 <li>Setup dot-qmail files appropriately in your home directory.<br><br>
 
@@ -265,7 +265,8 @@ otherwise it goes through the confirmation process.
 
 <ol>
 
-<li>Finish setting up your (<b>~/.tmdarc</b>) by reading through the
+<li>Finish setting up your <b>~/.tmdarc</b> and optionally a
+system-wide <b>/etc/tmdarc</b> by reading through the
 included <b>sample.tmdarc</b> file.  <b>CRYPT_KEY</b>,
 <b>MAIL_TRANSFER_AGENT</b>, <b>LOCAL_DELIVERY_AGENT</b>, and
 <b>RECIPIENT_DELIMITER</b> are required entries for Postfix users.
