@@ -1,3 +1,8 @@
+2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-server.ht (Links): Mention systemwide configuration file
+	/etc/tmdarc.
+	
 2001-10-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* index.ht (Links): Move historical information into history.ht.
